[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Graphics/Backgrounds/darkPurple.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Gameplay.gd" type="Script" id=3]

[node name="Drone_Battle" type="Node2D"]
position = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 3.0
margin_right = 1025.0
margin_bottom = 618.0
texture = ExtResource( 1 )
expand = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -6, 4 )
scale = Vector2( 0.5, 0.5 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.7, 0.7 )
smoothing_enabled = true

[node name="Laser" type="Node2D" parent="."]
light_mask = 3
position = Vector2( 0, 1 )

[node name="Drone" type="Node2D" parent="."]
light_mask = 3
scale = Vector2( 0.5, 0.5 )

[node name="Drone_Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="laser" from="Player" to="." method="_on_PLayer_laser"]
[connection signal="timeout" from="Drone_Timer" to="." method="_on_Drone_Timer_timeout"]
